# CST276SRS03

./: CMakeLists.txt  LICENSE  README.md  REPORT.md  main.cpp
CompositeFactory/: Circle.cpp  Circle.h  CircleFactory.cpp  CircleFactory.h  CollectionOfShapes.cpp  CollectionOfShapes.h  Drawing.cpp  Drawing.h  Line.cpp  Line.h  LineFactory.cpp  LineFactory.h  Polygon.cpp  Polygon.h  PolygonFactory.cpp  PolygonFactory.h  Rectangle.cpp  Rectangle.h  RectangleFactory.cpp  RectangleFactory.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h
GoFComposite/: Client.cpp  Client.h  Component.cpp  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h
GoFFactoryMethod/: ConcreteCreator.cpp  ConcreteCreator.h  ConcreteProduct.cpp  ConcreteProduct.h  Creator.cpp  Creator.h  Product.h
